Closed Bug 112252 Opened 24 years ago Closed 21 years ago

Clicking on any part of a component in installer selects/deselects it

Categories

(SeaMonkey :: Installer, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Future

People

(Reporter: fleona, Assigned: ajschult784)

References

Details

(Keywords: fixed1.7)

Attachments

(1 file, 1 obsolete file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.6+) Gecko/20011126 BuildID: 2001112308 Linux only [x] Component If you click on any part of the line, the component selects/deselects. It should only do so when clicking inside the [ ] Windows installer works as desired. Reproducible: Always Steps to Reproduce: 1.Click on any part of the component line 2. 3. Actual Results: Selection/Deselection when not expected Expected Results: Windows-alike behaviour
QA Contact: bugzilla → ktrina
Target Milestone: --- → M1
Target Milestone: M1 → Future
I see this too on Linux. You don't even need to click on the item - using the cursor keys to move the highlight up and down will also toggle the checkbox state. This bug is problematic because the only way to view the description of each component is to highlight it, but if you highlight it in any way, you toggle the checkbox! FYI, this occurs on the dialog box that's labelled "Please select the components you wish to install."
Attached patch patch (obsolete) — Splinter Review
this sets the component description text for clicking on the component text, but doesn't toggle it.
Assignee: slogan → ajschult
Status: NEW → ASSIGNED
Attachment #144393 - Flags: review?(dveditz+bmo)
Comment on attachment 144393 [details] [diff] [review] patch r=dveditz
Attachment #144393 - Flags: review?(dveditz+bmo) → review+
Attachment #144393 - Flags: superreview?(bryner)
Comment on attachment 144393 [details] [diff] [review] patch For integer values (not pointers or booleans) I tend to prefer writing: if (aColumn != 0) It looks like that might be the style used elsewhere in this code as well. sr=bryner with that changed.
Attachment #144393 - Flags: superreview?(bryner) → superreview+
Blocks: 240212
this addresses bryner's review comment
Attachment #144393 - Attachment is obsolete: true
checked in by bz
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment on attachment 145980 [details] [diff] [review] patch for checkin this needs to go on the branch with the one from bug 240212
Attachment #145980 - Flags: approval1.7?
Comment on attachment 145980 [details] [diff] [review] patch for checkin a=asa (on behalf of drivers) for checkin to 1.7
Attachment #145980 - Flags: approval1.7? → approval1.7+
checked in on 1.7 branch
Keywords: fixed1.7
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: