Only toggle the checkbox when the checkbox is clicked.  Bug 112252, patch by Andrew Schultz <ajschult@mindspring.com>, r=dveditz, sr=bryner